--- a/css/tooplate-infinite-loop.css
+++ b/css/tooplate-infinite-loop.css
@@ -697,3 +697,12 @@ p {
     margin: 0;
   }
 }
+.logo{
+  display: block;
+  text-indent: 0px;
+  position: relative; left: -50px; top:-25px; 
+  width: 150px;
+  height: 150px;
+  background: url(img/tronder_energi.svg);
+  background-size: contain;
+}
