Lagt inn node-endrings-skall
"Legg til node" og "fjern node"

--- a/css/egen_formattering.css
+++ b/css/egen_formattering.css
@@ -1,3 +1,28 @@
 .tm-intro-text-container {
     text-align: center;
 }
+
+.node-add-and-remove {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.add-node {
+    text-align: left;
+    flex-basis: 40%;
+    border: 2px solid #3377AA;
+    padding: 1%;
+}
+
+.remove-node {
+    text-align: left;
+    flex-basis: 40%;
+    border: 2px solid #3377AA;
+    padding: 1%;
+}
+
+.node-oversikt {
+    text-align: left;
+    margin: 80px;
+}
