--- a/css/egen_formattering.css
+++ b/css/egen_formattering.css
@@ -28,8 +28,9 @@
 
 .node-oversikt {
     text-align: left;
-    /* align-self: baseline; */
-    margin: 80px;
+    flex-basis: 40%;
+    border: 2px solid #3377AA;
+    padding: 1%;
 }
 
 .input-box {
@@ -52,6 +53,10 @@
 
 ::placeholder {
     color: gray;
+}
+
+.bold-font {
+    font-weight: bold;
 }
 
 /* .add_lat>#lat {
