Revert "Ch ch ch ch changes"
This reverts commit eccc3b0b7437ced9a5e8da530487fa5ed6f23243.

--- a/css/egen_formattering.css
+++ b/css/egen_formattering.css
@@ -28,9 +28,8 @@
 
 .node-oversikt {
     text-align: left;
-    flex-basis: 40%;
-    border: 2px solid #3377AA;
-    padding: 1%;
+    /* align-self: baseline; */
+    margin: 80px;
 }
 
 .input-box {
@@ -53,10 +52,6 @@
 
 ::placeholder {
     color: gray;
-}
-
-.bold-font {
-    font-weight: bold;
 }
 
 /* .add_lat>#lat {
